# pokemon-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.py  main.py  pyproject.toml  ram_map.md  requirements-test.txt  requirements.txt
.github/: dependabot.yml
agent/: history.py  lm_studio_client.py  reward.py  tools.py
evals/: __init__.py  __main__.py  goals.py  runner.py  scenarios.py
game/: _mgba_build.py  constants.py  memory_reader.py  mgba_client.py  mgba_core.py  pathfinding.py  state.py  tilemap_reader.py  viewer.py
knowledge/: battle.py  leafgreen_data.py  map_graph.py  movelearn.py  navigation.py  shopping.py  system_prompt.py  type_chart.py
memory/: battle_journal.py  long_term.py  short_term.py
tests/: conftest.py  test_badge_reconcile.py  test_battle_active_mon.py  test_battle_display_slot.py  test_battle_journal_cache.py  test_battle_summary.py  test_binding.py  test_boot_control.py  test_charset_and_state.py  test_decrypt.py  test_episode_result.py  test_eval_goals.py  test_evolution.py  test_flee_battle.py  test_go_to_stall.py  test_grind_skill.py  test_gym_objective.py  test_heal_skill.py  test_history_trim.py  test_item_pickup.py  test_items_pocket.py  test_long_term_persist.py  test_map_graph.py  test_memory_reader.py  test_move_learn_lingering.py  test_movelearn.py  test_nav_scenarios.py  test_normalize_button.py  test_party_garbage_guard.py  test_pathfinding.py  test_pp_obs.py  test_reward.py  test_shopping.py  test_short_term.py  test_startup_badge_source.py  test_step_rollback.py  test_switch_target.py  (+6 more)
(+5 files in other folders)
